// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Testing snapshot for Schematic's trackEvent destination action: all fields 1`] = `
Object {
  "api_key": "H%fspr!Jez(TWP",
  "body": Object {
    "company": Object {
      "testType": "H%fspr!Jez(TWP",
    },
    "event": "h%fspr!jez(twp",
    "traits": Object {
      "raw_event_name": "H%fspr!Jez(TWP",
    },
    "user": Object {
      "user_id": "H%fspr!Jez(TWP",
    },
  },
  "sent_at": "2024-03-01T23:31:37.505Z",
  "type": "track",
}
`;

exports[`Testing snapshot for Schematic's trackEvent destination action: required fields 1`] = `
Object {
  "api_key": "H%fspr!Jez(TWP",
  "body": Object {
    "event": "h%fspr!jez(twp",
  },
  "sent_at": "2024-03-01T23:31:37.497Z",
  "type": "track",
}
`;
